<resources>
    <string name="app_name">Expense Tracker</string>
    <string name="text_accounts">All Accounts</string>
    <string name="text_bills">All Bills</string>
    <string name="hint_name">Name</string>
    <string name="hint_pie_chart">Pie Chart</string>
    <string name="done">done</string>
    <string name="hint_radar_chart">Radar Chart</string>
    <string name="hint_bar_chart">Bar Chart</string>
    <string name="hint_profile_settings">Profile Settings</string>
    <string name="hint_app_settings">App Settings</string>
    <string name="hint_id">ID</string>
    <string name="hint_email">Email</string>
    <string name="hint_passw">********</string>
    <string name="hint_report">Report</string>
    <string name="hint_amount">Amount</string>
    <string name="hint_date">Date</string>
    <string name="hint_company">Company*</string>
    <string name="hint_company_recyler">Company</string>
    <string name="hint_description">Description*</string>
    <string name="hint_select">Select Category</string>
    <string name="hint_description_recyler">Description</string>
    <string name="hint_category">Category</string>
    <string name="hint_password">Password</string>
    <string name="hint_new_password">New Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">SIGN IN</string>
    <string name="text_continue">Continue</string>
    <string name="text_register">Register</string>
    <string name="text_add">Add</string>
    <string name="text_modify">MODIFY</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_close">Close</string>
    <string name="text_created">Your account has been successfully created!</string>
    <string name="text_dont_worry">Dont worry, you can add it manually or retry scanning of receipt. Dont forget, that all scanned photocopy of receipts located in app gallery...</string>
    <string name="text_categories">Categories</string>
    <string name="text_congratulations">Congratulations</string>
    <string name="text_data_was_not_recognized">Data was not recognized!</string>
    <string name="text_welcome">Welcome</string>
    <string name="text_add_bill">Add Bill</string>
    <string name="text_edit_bill">Edit Bill</string>
    <string name="text_add_category">Add Category</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="bill">Bill</string>
    <string name="error_message_password">Enter Password</string>
    <string name="error_category">Please, type category!</string>
    <string name="error_empty_amount">Amount cannot be empty</string>
    <string name="error_empty_date">Date cannot be empty</string>
    <string name="error_empty_category">Category cannot be empty</string>
    <string name="success_already_exists">Already exists</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_select_type">Please choose type of chart in "Account Settings"</string>
    <string name="error_password_changed">Password has been changed</string>
    <string name="error_info_changed">Info has been changed</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="select_year">Select Year</string>
    <string name="title_activity_recognize">Recognize Text</string>
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="action_set">Set</string>
    <string name="action_cancel">Cancel</string>
    <!-- Select image activity -->
    <string name="take_photo">Take a Photo</string>
    <string name="select_image_in_album">From Gallery</string>
    <string name="dash">-</string>
    <string name="scrollViewStart">START OF SCROLLVIEW</string>
    <string name="scrollViewEnd">END OF SCROLLVIEW</string>
    <string name="title_activity_profile_sett">Settings</string>



    <string name="title_activity_document_scanner">ConText Scanner</string>
    <string name="title_activity_gallery">Document Gallery</string>
    <string name="title_activity_full_image">Scanned Image Viewer</string>
    <string name="images_scanned">Images Scanned</string>
    <string name="action_share">Share</string>
    <string name="action_delete">Delete</string>
    <string name="confirm_title">Confirm</string>
    <string name="confirm_delete_text">Do you want to delete this image?</string>
    <string name="confirm_delete">Do you want to delete this text?</string>
    <string name="answer_yes">Yes</string>
    <string name="answer_no">No</string>
    <string name="confirm_delete_multiple_text">Do you want to delete the selected images?</string>
    <string name="share_snackbar">Share images through</string>
    <string name="scanningToast">Searching for document\nTap again to scan whole image</string>
    <string name="colorMode">Color Mode</string>
    <string name="bwMode"><![CDATA[B&W mode]]></string>
    <string name="autoMode">Automatic Mode</string>
    <string name="manualMode">Manual Mode</string>
    <string name="share_app_using">Share link through</string>
    <string name="settings">Settings</string>
    <string name="basic_settings">Basic Settings</string>
    <string name="automatic_tagging">Automatic Tagging</string>
    <string name="automatic_tagging_summary">Define automatic tags to be applied on marked scans using the special page template</string>
    <string name="match_aspect">Match preview aspect ratio</string>
    <string name="match_aspect_summary">Most devices have the highest resolution picture aspect ratio different from the preview one, this setting will select the highest picture resolution that matches with the aspect ratio of preview</string>
    <string name="bug_rotate">Rotate Image 180º</string>
    <string name="bug_rotate_summary">Some devices have the camera upside down, this setting adjusts everything to make sense</string>
    <string name="send_message">Send Message</string>
    <string name="answer_later">Later</string>
    <string name="activateunknown">Go to Settings</string>
    <string name="feedback">Feedback</string>
    <string name="filterModeOn">Image Processor On</string>
    <string name="filterModeOff">Image Processor Off</string>
    <string name="action_tag">Tag</string>

    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Ocr dependencies cannot be downloaded due to low device storage</string>
    <string name="ocr_header">Click &quot;Detect Text&quot; to detect text</string>
    <string name="read_text">Detect Text</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="ocr_success">Text read successfully</string>
    <string name="ocr_failure">No text captured</string>
    <string name="ocr_error">"Error reading text: %1$s"</string>
    <string name="ocr">OCR</string>
    <string name="b_scan">SCAN</string>
    <string name="s_bill">Bill</string>
    <string name="click_ocr_to_detect_text">Click OCR To Detect Text:</string>
    <string name="tap_detected_text_on_the_screen_to_capture">Tap detected text on the screen to capture!</string>
    <string name="clear">Clear</string>
    <string name="save_text">Save text</string>
    <string name="standard_tags">Standard Tags:</string>
    <string name="scan">SCAN</string>
    <string name="docs">DOCS</string>
    <string name="document_scanner">Document\nScanner</string>
    <string name="gallery">Gallery</string>
    <string name="detect_text_blocks">Detect Text Blocks</string>
    <string name="detect_text_lines">Detect Text Lines</string>
    <string name="detect_text_words">Detect Text Words</string>
    <string name="error_dsa">Error starting DocumentScannerActivity!</string>
    <string name="error_oca">Error starting OcrCaptureActivity!</string>
    <string name="error_results">Error receiving OCR results!</string>
    <string name="ocr_capture_screen">OCR Capture</string>
    <string name="no_text_detected">No text detected. Tap on the text bounding box on the screen.</string>
    <string name="snackbar_tap">Tap the textboxes to capture the text. Pinch/Stretch to zoom</string>
    <string name="got_it">Got it</string>
    <string name="error_saving_text">Error saving text!</string>
    <string name="saved_texts_list">Saved Texts</string>
    <string name="currently_there_are_no_saved_ocr_texts">Currently there are no saved OCR texts.</string>
    <string name="summary">Summary</string>
    <string name="edit_text_detail">Edit Text</string>
    <string name="rename">Rename</string>
    <string name="enter_file_name">Enter file name</string>
    <string name="cancel">Cancel</string>
    <string name="save_file">Save file</string>
    <string name="enter_filename">Enter Filename</string>
    <string name="enter_text">Enter text</string>
    <string name="textfilename">Filename:</string>

</resources>
