<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

                android:layout_width="match_parent" android:layout_height="match_parent"
                android:paddingBottom="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="20dp"
                android:background="@drawable/layout_rounded">
    <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="560dp"
            android:orientation="vertical"
    >
        <android.support.v7.widget.AppCompatTextView
                android:id="@+id/textViewEdit_bill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_edit_bill"
                android:padding="10dp"
                android:textSize="15sp"
                android:layout_gravity="center_horizontal"
        />
        <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayoutAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/textInputEditTextAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="20"
                    android:hint="@string/hint_amount"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:textColor="@android:color/white"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayoutDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/textInputEditTextDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="100"
                    android:hint="@string/hint_description"
                    android:inputType="textMultiLine"
                    android:maxLines="1"
                    android:textColor="@android:color/white"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayoutDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/textInputEditTextDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_date"
                    android:clickable="true"
                    android:editable="false"
                    android:focusable="false"
                    android:imeOptions="actionNext"
                    android:textColor="@android:color/white"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayoutCompany"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/textInputEditTextCompany"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="100"
                    android:hint="@string/hint_company"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@android:color/white"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayoutCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
        >
            <Spinner
                    android:id="@+id/textInputEditTextCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:prompt="@string/hint_select"
                    android:spinnerMode="dropdown"
                    android:textColor="@android:color/white"
                    style="@style/Widget.AppCompat.Spinner.Underlined"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.v7.widget.AppCompatButton
                android:id="@+id/appCompatButtonModify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/btn_rounded"
                android:text="@string/text_modify"
                android:textSize="19dp"/>
        <android.support.v7.widget.AppCompatTextView
                android:id="@+id/appCompatTextViewCancelLink"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/text_cancel"
                android:textSize="16dp"/>
    </android.support.v7.widget.LinearLayoutCompat>
</RelativeLayout>