<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:paddingBottom="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp"
        tools:context="activities.LoginActivity">

    <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="100dp">

        <android.support.v7.widget.AppCompatImageView
                android:layout_width="350dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/follower"/>

        <android.support.v7.widget.AppCompatTextView
                android:id="@+id/textViewLinkCongratulations"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:text="@string/text_congratulations"
                android:textSize="25sp"/>

        <android.support.v7.widget.AppCompatTextView
                android:id="@+id/textViewLinkCreated"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:gravity="center_horizontal"
                android:text="@string/text_created"
                android:textColor="@color/description"
                android:textSize="23sp"/>

        <android.support.v7.widget.AppCompatButton
                android:id="@+id/appCompatButtonContinue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@drawable/btn_rounded"
                android:text="@string/text_continue"
                android:textSize="19sp"/>

    </android.support.v7.widget.LinearLayoutCompat>
</android.support.v4.widget.NestedScrollView>