<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    xmlns:app="http://schemas.android.com/apk/res-auto"
                                    android:id="@+id/cardView"
                                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                                    android:clickable="true"
                                    android:focusable="true"
                                    android:foreground="?attr/selectableItemBackground"
                                    app:cardCornerRadius="@dimen/activity_vertical_margin"
                                    app:cardElevation="@dimen/activity_vertical_margin"
    >
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/hint_amount"
                    android:textColor="@color/colorTextHint" />

            <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/textViewAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/hint_amount"
                    android:textColor="@color/spend" />
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

            <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/hint_description_recyler"
                    android:textColor="@color/colorTextHint" />

            <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/textViewDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/hint_description_recyler"
                    android:textColor="@android:color/darker_gray" />
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

            <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/hint_company_recyler"
                    android:textColor="@color/colorTextHint" />

            <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/textViewCompany"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/hint_company_recyler"
                    android:textColor="@android:color/darker_gray" />
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

            <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/hint_date"
                    android:textColor="@color/colorTextHint" />

            <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/textViewDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/hint_date"
                    android:textColor="@android:color/darker_gray" />
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

            <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/hint_category"
                    android:textColor="@color/colorTextHint" />

            <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/textViewCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/hint_category"
                    android:textColor="@android:color/darker_gray" />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>